fazendo teste no retorno do metodo get